// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adapter processes app request and dependency as spans 1`] = `Array []`;

exports[`Adapter processes app request and dependency as spans 2`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "duration.ms": 9.1593,
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "itemCount": 1,
      "name": "{function name}",
      "performanceBucket": "<250ms",
      "properties.category": "Host.Results",
      "properties.fullName": "Functions.{function name}",
      "properties.functionExecutionTimeMs": "4.7239",
      "properties.hostInstanceId": "hostInstanceIdValue",
      "properties.http.method": "GET",
      "properties.http.path": "/api/{function name goes here}",
      "properties.invocationId": "invocationIdValue",
      "properties.logLevel": "Information",
      "properties.processId": "8912",
      "properties.triggerReason": "This function was programmatically called via the host APIs.",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "service.name": "{function name}",
      "success": true,
      "type": "AppRequest",
    },
    "id": "09d760d34d75e847",
    "timestamp": 1619736074123,
    "trace.id": "12345",
  },
]
`;

exports[`Adapter processes app request and dependency as spans 3`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "duration.ms": 9.1593,
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "itemCount": 1,
      "name": "{function name}",
      "performanceBucket": "<250ms",
      "properties.category": "Host.Results",
      "properties.fullName": "Functions.{function name}",
      "properties.functionExecutionTimeMs": "4.7239",
      "properties.hostInstanceId": "hostInstanceIdValue",
      "properties.http.method": "GET",
      "properties.http.path": "/api/{function name goes here}",
      "properties.invocationId": "invocationIdValue",
      "properties.logLevel": "Information",
      "properties.processId": "8912",
      "properties.triggerReason": "This function was programmatically called via the host APIs.",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "service.name": "{function name}",
      "success": true,
      "type": "AppRequest",
    },
    "id": "09d760d34d75e847",
    "timestamp": 1619736074123,
    "trace.id": "12345",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "{role instance id}",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "http",
      "duration.ms": 231,
      "http.target": "{target property of client.trackDependency}",
      "itemCount": 1,
      "name": "External/{name property of client.trackDependency}",
      "parent.id": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "{resource uuid4}",
      "resourceId": "/SUBSCRIPTIONS/{subscription id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "type": "AppDependency",
    },
    "id": "{id value}",
    "timestamp": 1620165670940,
    "trace.id": "67890",
  },
]
`;

exports[`Adapter processes app request as event 1`] = `Array []`;

exports[`Adapter processes app request as event 2`] = `
Array [
  Event {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "category": "Host.Results",
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "durationMs": 9.1593,
      "fullName": "Functions.{function name}",
      "functionExecutionTimeMs": "4.7239",
      "hostInstanceId": "hostInstanceIdValue",
      "http.method": "GET",
      "http.path": "/api/{function name goes here}",
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "id": "09d760d34d75e847",
      "invocationId": "invocationIdValue",
      "itemCount": 1,
      "logLevel": "Information",
      "name": "{function name}",
      "operationId": "12345",
      "operationName": "{function name}",
      "parentId": "12345",
      "performanceBucket": "<250ms",
      "processId": "8912",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "success": true,
      "triggerReason": "This function was programmatically called via the host APIs.",
    },
    "eventType": "AzureAppRequest",
    "timestamp": 1619736074123,
  },
]
`;
